--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,7 +1,6 @@
 {
   "name": "junoon-app",
   "version": "1.0.0",
-  "private": true,
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
@@ -10,18 +9,15 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~48.0.18",
+    "expo": "~48.0.0",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
-    "react-native": "0.71.8",
-    "@react-navigation/native": "^6.1.6",
-    "@react-navigation/native-stack": "^6.9.12",
-    "react-native-gesture-handler": "~2.12.0",
-    "react-native-reanimated": "~3.3.0",
-    "react-native-screens": "~3.22.0",
-    "react-native-safe-area-context": "4.5.0"
+    "react-native": "0.71.14",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
-  }
+  },
+  "private": true
 }
