--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,20 +1,20 @@
 {
-  "name": "junoon-app",
+  "name": "junoon-wellness-mvp",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~48.0.0",
-    "expo-status-bar": "~1.4.4",
+    "expo": "~51.0.0",
+    "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
-    "react-native": "0.71.14",
-    "react-native-safe-area-context": "4.5.0",
-    "react-native-screens": "~3.20.0"
+    "react-native": "0.74.5",
+    "lucide-react-native": "^0.400.0",
+    "react-native-svg": "15.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
