--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,12 @@
     "react": "18.2.0",
     "react-native": "0.74.5",
     "lucide-react-native": "^0.400.0",
-    "react-native-svg": "15.2.0"
+    "react-native-svg": "15.2.0",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/bottom-tabs": "^6.5.20",
+    "@react-navigation/native-stack": "^6.9.26",
+    "react-native-screens": "~3.31.1",
+    "react-native-safe-area-context": "4.10.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
